<resources>
    <string name="app_name">My transactions</string>
    <string name="add_transaction">Add transaction</string>
    <string name="citat">“That man is richest whose pleasures are cheapest.”</string>
    <string name="pisac">Henry David Thoreau</string>
    <string name="type_of_transaction">Type of transaction</string>
    <string name="description">Description</string>
    <string name="date_of_transaction">Date of transaction</string>
    <string name="transaction_interval">Transaction interval</string>
    <string name="end_date">End date</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="title_of_transaction">Title of transaction</string>
    <string name="api_id">7a4c053e-81fb-42ec-847b-b356864911dc</string>
    <string name="amount" />
</resources>
