<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#a5cfdd">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:background="#000000">
        <LinearLayout
            android:id="@+id/ll0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#a5cfdd"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="#a5cfdd"
                android:text="@string/title_of_transaction"
                android:textSize="10sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#64BEDC" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:background="#ffffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll0" >

            <EditText
                android:id="@+id/iTitleTransakcije"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:textSize="20sp" />
        </LinearLayout>


        <View
            android:id="@+id/v3"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginTop="1dp"
            android:background="#a5cfdd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll1" />

        <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#a5cfdd"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/v3">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="#a5cfdd"
                android:text="@string/type_of_transaction"
                android:textSize="10sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#64BEDC" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#64BEDC"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll2">

            <EditText
                android:id="@+id/iTypeTransakcije"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="#ffffff"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#a5cfdd"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll3">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="#a5cfdd"
                android:text="@string/description"
                android:textSize="10sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#64BEDC" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#64BEDC"
            android:weightSum="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="2"
                android:background="#ffffff">

                <ImageView
                    android:id="@+id/iIconTransakcije"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="1dp" />
            </LinearLayout>

            <EditText
                android:id="@+id/iOpisTransakcije"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:id="@+id/v7"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:background="#a5cfdd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll5" />


        <LinearLayout
            android:id="@+id/ll6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#a5cfdd"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/v7">

            <TextView
                android:id="@+id/format"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="#a5cfdd"
                android:text="@string/date_of_transaction"
                android:textSize="10sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#64BEDC" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#64BEDC"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll6">

            <EditText
                android:id="@+id/iDateTransakcije"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="#ffffff"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:id="@+id/v11"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="#a5cfdd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll7" />

        <LinearLayout
            android:id="@+id/ll8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#a5cfdd"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/v11">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="#a5cfdd"
                android:text="@string/transaction_interval"
                android:textSize="10sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#64BEDC" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#64BEDC"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll8">

            <EditText
                android:id="@+id/iIntervalTransakcije"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="#ffffff"
                android:textSize="18sp" />
        </LinearLayout>


        <View
            android:id="@+id/v13"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="#a5cfdd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll9" />

        <LinearLayout
            android:id="@+id/ll10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#a5cfdd"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/v13">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="#a5cfdd"
                android:text="@string/end_date"
                android:textSize="10sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#64BEDC" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#64BEDC"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll10">

            <EditText
                android:id="@+id/iEndTransakcije"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="#ffffff"
                android:textAlignment="gravity"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:id="@+id/v15"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="#a5cfdd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll11" />

        <LinearLayout
            android:id="@+id/ll12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#a5cfdd"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/v15">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="#a5cfdd"
                android:text="Amount"
                android:textSize="10sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#64BEDC" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#64BEDC"
            android:orientation="horizontal"
            android:weightSum="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll12">

            <EditText
                android:id="@+id/iIznosTransakcije"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/ukupniIznosTransakcije"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="2"
                android:background="#ffffff"
                android:textAlignment="center"
                android:textSize="26sp" />
        </LinearLayout>

        <View
            android:id="@+id/v17"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="#a5cfdd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll13" />

        <LinearLayout
            android:id="@+id/ll14"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#a5cfdd"
            android:orientation="horizontal"

            android:weightSum="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/v17">

            <Button
                android:id="@+id/iSaveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:clickable="true"
                android:text="@string/save" />

            <Button
                android:id="@+id/iDeleteButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:clickable="true"
                android:text="@string/delete" />
        </LinearLayout>

        <View
            android:id="@+id/v18"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="#a5cfdd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll14" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>